--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -1,5 +1,5 @@
-<mat-grid-list class="employee-list" cols="4">
-  <mat-grid-tile *ngFor="let emp of employees">
-    <app-employee [employee]="emp"></app-employee>
-  </mat-grid-tile>
+<mat-grid-list class="employee-list"  cols="1">
+  <div *ngFor="let emp of employees; index as i">
+    <app-employee [employee]="emp" [totalReports] = "allReports[i]"></app-employee>
+  </div>
 </mat-grid-list>
