--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -8,5 +8,7 @@
       <dt>Job Title</dt>
       <dd>{{employee.position}}</dd>
     </dl>
+      Direct Reports
+      <app-employee-reports-list-info [employees] = "totalReports.directReports"></app-employee-reports-list-info>
   </mat-card-content>
 </mat-card>
