--- a/src/app/employee-reports-info/employee-reports-info.component.html
+++ b/src/app/employee-reports-info/employee-reports-info.component.html
@@ -4,7 +4,7 @@
             <div>
                 {{employee.firstName}} {{employee.lastName}}, {{employee.position}}
             </div>
-            <div>
+            <div class="buttons">
                 <button>Edit</button>
                 <button>Delete</button>
             </div>
