added delete functionality

--- a/src/app/employee-reports-info/employee-reports-info.component.html
+++ b/src/app/employee-reports-info/employee-reports-info.component.html
@@ -6,7 +6,7 @@
             </div>
             <div class="buttons">
                 <button>Edit</button>
-                <button>Delete</button>
+                <button (click) = "deleteReport()">Delete</button>
             </div>
         </div>
     </mat-card-content>
