--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -9,6 +9,6 @@
       <dd>{{employee.position}}</dd>
     </dl>
       Direct Reports
-      <app-employee-reports-list-info [employees] = "totalReports.directReports"></app-employee-reports-list-info>
+      <app-employee-reports-list-info [employees] = "totalReports.directReports" (newDeleteEvent)="handleDeletedEvent($event)"></app-employee-reports-list-info>
   </mat-card-content>
 </mat-card>
