added pop ups to the delete button

--- a/src/app/employee-reports-list-info/employee-reports-list-info.component.html
+++ b/src/app/employee-reports-list-info/employee-reports-list-info.component.html
@@ -6,6 +6,6 @@
 
   <ng-template #defaultMessage>
     <div>
-      No Direct Reports
+      This employee has no reports.
     </div>
   </ng-template>
