added compensation edit field and cleaned UI

--- a/src/app/delete-pop-up/delete-pop-up.component.html
+++ b/src/app/delete-pop-up/delete-pop-up.component.html
@@ -1,6 +1,8 @@
 <h2 mat-dialog-title>{{ title }}</h2>
 <div mat-dialog-content>
-  {{ message }}
+  {{ message }}<br>
+  {{ employeeInfo }}<br><br>
+  {{ confirmation }}
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onOk()">Ok</button>
