--- a/src/app/employee-reports-info/employee-reports-info.component.html
+++ b/src/app/employee-reports-info/employee-reports-info.component.html
@@ -5,7 +5,7 @@
                 {{employee.firstName}} {{employee.lastName}}, {{employee.position}}
             </div>
             <div class="buttons">
-                <button>Edit</button>
+                <button (click)="editCompensation()">Edit</button>
                 <button (click) = "deleteReport()">Delete</button>
             </div>
         </div>
