--- a/src/app/employee-reports-info/employee-reports-info.component.scss
+++ b/src/app/employee-reports-info/employee-reports-info.component.scss
@@ -1,6 +1,10 @@
+.employee {
+    background-color: rgb(248, 249, 250);
+}
 .content {
     display: flex;
     justify-content: space-between;
+    color: rgb(79, 79, 80);
 
     button {
         margin-right: 10px;
