--- a/src/app/employee/employee.component.css
+++ b/src/app/employee/employee.component.css
@@ -2,3 +2,12 @@
     width: 100%;
     box-sizing: border-box;
 }
+
+.title {
+    color: rgb(0, 102, 186);
+}
+
+.content {
+    color: rgb(255, 255, 255);
+    background-color: rgb(108, 117, 125);
+}
