UI changes and working compensation editor

--- a/src/app/compensation-pop-up/compensation-pop-up.component.html
+++ b/src/app/compensation-pop-up/compensation-pop-up.component.html
@@ -14,7 +14,7 @@
       </mat-form-field><br>
       <mat-form-field appearance="outline">
         <mat-label>Compensation</mat-label>
-        <input matInput placeholder={{firstName}}>
+        <input matInput placeholder={{existingCompensation}} [(ngModel)]="compensation">
       </mat-form-field>
 
 </div>
