--- a/src/app/employee-reports-info/employee-reports-info.component.html
+++ b/src/app/employee-reports-info/employee-reports-info.component.html
@@ -1,11 +1,10 @@
-<mat-card class="employee">
-    <mat-card-content>
+<div>
         <div class="content">
             <div>
                 {{employee.firstName}} {{employee.lastName}}, {{employee.position}}
             </div>
             <div class="buttons">
-                <button (click)="editCompensation()" mat-button>
+                <button (click)="editCompensation()" class="edit" mat-button>
                     <mat-icon>edit</mat-icon>
                 </button>
                 <button (click) = "deleteReport()" mat-button>
@@ -13,6 +12,4 @@
                 </button>
             </div>
         </div>
-    </mat-card-content>
-  </mat-card>
-  
+</div>
