--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,10 +1,13 @@
 <mat-card class="employee">
-  <mat-card-header>
+  <mat-card-header class="header">
     <mat-card-title class="title">{{employee.firstName}} {{employee.lastName}}, {{employee.position}}</mat-card-title>
     <mat-card-subtitle>Employee ID: {{employee.id}} Direct Reports: {{totalReports.totalReports}}</mat-card-subtitle>
   </mat-card-header>
+  <hr>
   <mat-card-content class="content">
+    <div class="report">
       Direct Reports:
-      <app-employee-reports-list-info [employees] = "totalReports.directReports" (newDeleteEvent)="handleDeletedEvent($event)"></app-employee-reports-list-info>
+    </div>
+      <app-employee-reports-list-info [employees] = "totalReports.directReports" (newDeleteEvent)="handleDeletedEvent($event)" (updatedCompensationEmitter)="handleUpdatedCompensation($event)"></app-employee-reports-list-info>
   </mat-card-content>
 </mat-card>
