added few UI changes and unit tests for 2 components

--- a/src/app/delete-pop-up/delete-pop-up.component.html
+++ b/src/app/delete-pop-up/delete-pop-up.component.html
@@ -5,7 +5,7 @@
   {{ confirmation }}
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="onOk()">Ok</button>
-  <button mat-button (click)="onCancel()">Cancel</button>
+  <button mat-button class="ok-button" (click)="onOk()">Ok</button>
+  <button class="cancel-button" mat-button (click)="onCancel()">Cancel</button>
 
 </div>
