--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -8,6 +8,8 @@
     <div class="report">
       Direct Reports:
     </div>
-      <app-employee-reports-list-info [employees] = "totalReports.directReports" (newDeleteEvent)="handleDeletedEvent($event)" (updatedCompensationEmitter)="handleUpdatedCompensation($event)"></app-employee-reports-list-info>
+    <app-employee-reports-list-info [employees]="totalReports.directReports"
+      (newDeleteEvent)="handleDeletedEvent($event)"
+      (updatedCompensationEmitter)="handleUpdatedCompensation($event)"></app-employee-reports-list-info>
   </mat-card-content>
 </mat-card>
